refact: cursor pointer added to some of the buttons and border added to some elements to avoid content shifting on hoverÐ

--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -413,6 +413,7 @@
     top: 66%;
     left: 50%;
     transform: translateX(-50%);
+    border: 2px solid $btn-color;
     @include vieport-lg{
       top: 58%;
     }
@@ -426,7 +427,6 @@
     &:hover{
       color: $btn-color;
       background: white;
-      border: 2px solid $btn-color;
     }
   }
 
@@ -508,9 +508,10 @@
     text-align: center;
     border-radius: $border-radius-sm;
     white-space: nowrap;
+    border: 2px solid transparent;
 
     &:hover{
-      border: 2px solid $btn-color;
+      border-color: $btn-color;
     }
   }
 
