--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -115,6 +115,8 @@
     border-radius: $border-radius-sm;
     font-size: 1.4rem;
     white-space: nowrap;
+    cursor: pointer;
+    border: 2px solid transparent;
     @include vieport-lg{
       flex: 0 1 20%;
     }
@@ -123,7 +125,7 @@
     }
     &:hover{
       background: $main-bg;
-      border: 2px solid $btn-color;
+      border-color: $btn-color;
     }
   }
 
